--- a/src/DrawPlane.css
+++ b/src/DrawPlane.css
@@ -6,4 +6,33 @@
     margin-bottom:  1vh;
     margin-top:  1vh;
   }
-  
+  @media screen and (max-width:960px){
+    .PopUp-textarea {
+        width: 300px;
+        height: 100px;
+    }
+}
+
+.PopUp-button {
+    padding:10px 15px;
+}
+
+.button-box {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    z-index: 1000;
+}
+
+.button {
+background:#489dff;
+padding:20px 25px;
+border:none;
+font-size:22px;
+cursor:pointer;
+color:white;
+font-weight:bold;
+transition:0.3s ease all;
+box-shadow:1px 2px 3px rgba(0,0,0,0.3);
+}
