--- a/src/DrawPlane.css
+++ b/src/DrawPlane.css
@@ -1,20 +1,16 @@
 .PopUp-textarea {
     padding:  2vh;
-    width:  550px;
+    width:  90%;
     height:  300px;
     box-shadow:  0 0 9px 0px rgba(0, 0, 0, 0.1);
     margin-bottom:  1vh;
     margin-top:  1vh;
   }
-  @media screen and (max-width:960px){
-    .PopUp-textarea {
-        width: 300px;
-        height: 100px;
-    }
-}
+
 
 .PopUp-button {
     padding:10px 15px;
+    
 }
 
 .button-box {
@@ -24,6 +20,13 @@
     bottom: 20px;
     z-index: 1000;
 }
+@media screen and (max-height:650px){
+    .button-box {
+        bottom: 50%;
+        right: 85%;
+    }
+}
+
 
 .button {
 background:#489dff;
@@ -35,4 +38,9 @@ color:white;
 font-weight:bold;
 transition:0.3s ease all;
 box-shadow:1px 2px 3px rgba(0,0,0,0.3);
+}
+@media screen and (max-width:940px){
+    .button {
+        padding:10px 15px;
+    }
 }
